--- a/email-templates/order-cancellation.html
+++ b/email-templates/order-cancellation.html
@@ -95,7 +95,7 @@
         }
         .cta-button {
             display: inline-block;
-            background-color: #FF7A19;
+            background-color: #00afef;
             color: white;
             padding: 12px 30px;
             text-decoration: none;
@@ -105,7 +105,7 @@
             transition: background-color 0.3s;
         }
         .cta-button:hover {
-            background-color: #E66600;
+            background-color: #0099d6;
         }
         .footer {
             background-color: #1A1A1A;
@@ -115,7 +115,7 @@
             font-size: 14px;
         }
         .footer a {
-            color: #FF7A19;
+            color: #00afef;
             text-decoration: none;
         }
     </style>
@@ -123,6 +123,7 @@
 <body>
     <div class="container">
         <div class="header">
+            <img src="https://files.hogtechgh.com/IMG_0718.PNG" alt="Hogtech" style="height: 50px; margin-bottom: 15px;" />
             <h1>HOGTECH</h1>
             <p>Order Cancellation Notice</p>
         </div>
@@ -177,7 +178,8 @@
                 <a href="https://hogtechgh.com">www.hogtechgh.com</a> | 
                 <a href="mailto:support@hogtechgh.com">support@hogtechgh.com</a>
             </p>
-            <p>Phone: +233 55 134 4310</p>
+            <p>Phone: +233 553 886 5804</p>
+            <p>Address: Z236 Weija-Oblogo Rd, Greater Accra</p>
         </div>
     </div>
 </body>
