--- a/email-templates/wishlist-reminder.html
+++ b/email-templates/wishlist-reminder.html
@@ -13,10 +13,10 @@
           
           <!-- Header -->
           <tr>
-            <td style="background: linear-gradient(135deg, #FF7A19 0%, #FF9A19 100%); padding: 40px 20px; text-align: center;">
+            <td style="background: linear-gradient(135deg, #00afef 0%, #163b86 100%); padding: 40px 20px; text-align: center;">
               <img src="{{LOGO_URL}}" alt="Hogtech" style="width: 120px; height: auto; margin-bottom: 20px;">
               <h1 style="color: #ffffff; margin: 0; font-size: 28px; font-weight: bold;">
-                We See You'd Love These! 💝
+                We See You'd Love These!
               </h1>
               <p style="color: #ffffff; margin: 10px 0 0 0; font-size: 16px; opacity: 0.95;">
                 Your perfect tech is waiting for you
@@ -46,7 +46,7 @@
                   <img src="PRODUCT_IMAGE" alt="PRODUCT_NAME" style="width: 80px; height: 80px; object-fit: cover; border-radius: 4px; margin-right: 15px;">
                   <div style="flex: 1;">
                     <h3 style="margin: 0 0 5px 0; color: #1A1A1A; font-size: 16px;">PRODUCT_NAME</h3>
-                    <p style="margin: 0; color: #FF7A19; font-size: 18px; font-weight: bold;">GHC PRICE</p>
+                    <p style="margin: 0; color: #00afef; font-size: 18px; font-weight: bold;">GHC PRICE</p>
                     <p style="margin: 5px 0 0 0; color: #3A3A3A; font-size: 13px;">STOCK_STATUS</p>
                   </div>
                 </div>
@@ -57,7 +57,7 @@
               <table role="presentation" style="width: 100%; margin: 30px 0;">
                 <tr>
                   <td align="center">
-                    <a href="{{WISHLIST_URL}}" style="display: inline-block; background: linear-gradient(135deg, #FF7A19 0%, #FF9A19 100%); color: #ffffff; text-decoration: none; padding: 16px 40px; border-radius: 8px; font-size: 16px; font-weight: bold; box-shadow: 0 4px 15px rgba(255, 122, 25, 0.3);">
+                    <a href="{{WISHLIST_URL}}" style="display: inline-block; background: linear-gradient(135deg, #00afef 0%, #163b86 100%); color: #ffffff; text-decoration: none; padding: 16px 40px; border-radius: 8px; font-size: 16px; font-weight: bold; box-shadow: 0 4px 15px rgba(0, 175, 239, 0.3);">
                       View My Wishlist
                     </a>
                   </td>
@@ -79,17 +79,14 @@
               <table role="presentation" style="width: 100%;">
                 <tr>
                   <td style="width: 33.33%; text-align: center; padding: 10px;">
-                    <div style="font-size: 32px; margin-bottom: 10px;">🚚</div>
                     <p style="margin: 0; color: #1A1A1A; font-size: 13px; font-weight: bold;">Fast Delivery</p>
                     <p style="margin: 5px 0 0 0; color: #3A3A3A; font-size: 12px;">Quick shipping</p>
                   </td>
                   <td style="width: 33.33%; text-align: center; padding: 10px;">
-                    <div style="font-size: 32px; margin-bottom: 10px;">🔒</div>
                     <p style="margin: 0; color: #1A1A1A; font-size: 13px; font-weight: bold;">Secure Payment</p>
                     <p style="margin: 5px 0 0 0; color: #3A3A3A; font-size: 12px;">100% safe</p>
                   </td>
                   <td style="width: 33.33%; text-align: center; padding: 10px;">
-                    <div style="font-size: 32px; margin-bottom: 10px;">✅</div>
                     <p style="margin: 0; color: #1A1A1A; font-size: 13px; font-weight: bold;">Authentic Products</p>
                     <p style="margin: 5px 0 0 0; color: #3A3A3A; font-size: 12px;">100% genuine</p>
                   </td>
@@ -105,10 +102,10 @@
                 Questions? We're here to help!
               </p>
               <p style="color: #ffffff; margin: 0 0 5px 0; font-size: 13px;">
-                📞 +233 55 134 4310
+                Phone: +233 553 886 5804
               </p>
               <p style="color: #ffffff; margin: 0 0 20px 0; font-size: 13px;">
-                📧 support@hogtechgh.com
+                Email: support@hogtechgh.com
               </p>
               
               <div style="border-top: 1px solid #3A3A3A; padding-top: 20px; margin-top: 20px;">
@@ -116,10 +113,10 @@
                   © 2025 Hogtech. All rights reserved.
                 </p>
                 <p style="color: #ffffff; opacity: 0.7; margin: 0; font-size: 11px;">
-                  Ho Civic Center Shop #22 & Accra, Ghana
+                  Z236 Weija-Oblogo Rd, Greater Accra
                 </p>
                 <p style="color: #ffffff; opacity: 0.6; margin: 15px 0 0 0; font-size: 10px;">
-                  Don't want wishlist reminders? <a href="{{UNSUBSCRIBE_URL}}" style="color: #FF7A19; text-decoration: underline;">Unsubscribe</a>
+                  Don't want wishlist reminders? <a href="{{UNSUBSCRIBE_URL}}" style="color: #00afef; text-decoration: underline;">Unsubscribe</a>
                 </p>
               </div>
             </td>
