--- a/email-templates/cart-abandonment.html
+++ b/email-templates/cart-abandonment.html
@@ -13,10 +13,10 @@
           
           <!-- Header -->
           <tr>
-            <td style="background: linear-gradient(135deg, #FF7A19 0%, #FF9A19 100%); padding: 40px 20px; text-align: center;">
+            <td style="background: linear-gradient(135deg, #00afef 0%, #163b86 100%); padding: 40px 20px; text-align: center;">
               <img src="{{LOGO_URL}}" alt="Hogtech" style="width: 120px; height: auto; margin-bottom: 20px;">
               <h1 style="color: #ffffff; margin: 0; font-size: 28px; font-weight: bold;">
-                Oops! You Left Something Behind 🛒
+                Oops! You Left Something Behind
               </h1>
               <p style="color: #ffffff; margin: 10px 0 0 0; font-size: 16px; opacity: 0.95;">
                 Your cart misses you already!
@@ -47,7 +47,7 @@
                   <div style="flex: 1;">
                     <h3 style="margin: 0 0 5px 0; color: #1A1A1A; font-size: 16px;">PRODUCT_NAME</h3>
                     <p style="margin: 0; color: #3A3A3A; font-size: 14px;">Quantity: QUANTITY</p>
-                    <p style="margin: 5px 0 0 0; color: #FF7A19; font-size: 18px; font-weight: bold;">GHC PRICE</p>
+                    <p style="margin: 5px 0 0 0; color: #00afef; font-size: 18px; font-weight: bold;">GHC PRICE</p>
                   </div>
                 </div>
                 -->
@@ -56,15 +56,15 @@
                 <div style="border-top: 2px solid #e0e0e0; padding-top: 15px; margin-top: 20px; text-align: right;">
                   <p style="margin: 0; color: #3A3A3A; font-size: 16px;">
                     <strong>Cart Total: </strong>
-                    <span style="color: #FF7A19; font-size: 24px; font-weight: bold;">GHC {{CART_TOTAL}}</span>
+                    <span style="color: #00afef; font-size: 24px; font-weight: bold;">GHC {{CART_TOTAL}}</span>
                   </p>
                 </div>
               </div>
 
               <!-- Urgency Message -->
-              <div style="background-color: #fff3e0; border-left: 4px solid #FF7A19; padding: 15px; margin-bottom: 30px; border-radius: 4px;">
+              <div style="background-color: #E6F7FF; border-left: 4px solid #00afef; padding: 15px; margin-bottom: 30px; border-radius: 4px;">
                 <p style="margin: 0; color: #1A1A1A; font-size: 14px; line-height: 1.5;">
-                  ⚠️ <strong>Hurry!</strong> These items are in high demand and may sell out soon. Complete your purchase now to secure your order!
+                  <strong>Hurry!</strong> These items are in high demand and may sell out soon. Complete your purchase now to secure your order!
                 </p>
               </div>
 
@@ -72,7 +72,7 @@
               <table role="presentation" style="width: 100%; margin: 30px 0;">
                 <tr>
                   <td align="center">
-                    <a href="{{CART_URL}}" style="display: inline-block; background: linear-gradient(135deg, #FF7A19 0%, #FF9A19 100%); color: #ffffff; text-decoration: none; padding: 16px 40px; border-radius: 8px; font-size: 16px; font-weight: bold; box-shadow: 0 4px 15px rgba(255, 122, 25, 0.3); margin: 0 10px;">
+                    <a href="{{CART_URL}}" style="display: inline-block; background: linear-gradient(135deg, #00afef 0%, #163b86 100%); color: #ffffff; text-decoration: none; padding: 16px 40px; border-radius: 8px; font-size: 16px; font-weight: bold; box-shadow: 0 4px 15px rgba(0, 175, 239, 0.3); margin: 0 10px;">
                       Complete My Purchase
                     </a>
                   </td>
@@ -80,7 +80,7 @@
               </table>
 
               <p style="color: #3A3A3A; font-size: 13px; line-height: 1.6; margin: 20px 0 0 0; text-align: center;">
-                Having trouble checking out? <a href="{{CONTACT_URL}}" style="color: #FF7A19; text-decoration: underline;">Contact us</a> and we'll help!
+                Having trouble checking out? <a href="{{CONTACT_URL}}" style="color: #00afef; text-decoration: underline;">Contact us</a> and we'll help!
               </p>
             </td>
           </tr>
@@ -89,12 +89,12 @@
           <tr>
             <td style="background: linear-gradient(135deg, #1A1A1A 0%, #3A3A3A 100%); padding: 30px; text-align: center;">
               <h3 style="color: #ffffff; font-size: 20px; margin: 0 0 15px 0;">
-                🎁 Special Offer Just For You!
+                Special Offer Just For You!
               </h3>
               <p style="color: #ffffff; opacity: 0.9; margin: 0 0 20px 0; font-size: 15px;">
                 Complete your purchase within the next <strong>24 hours</strong> and enjoy free delivery!
               </p>
-              <div style="background-color: #FF7A19; display: inline-block; padding: 10px 20px; border-radius: 6px;">
+              <div style="background-color: #00afef; display: inline-block; padding: 10px 20px; border-radius: 6px;">
                 <p style="margin: 0; color: #ffffff; font-size: 14px; font-weight: bold;">
                   Code: COMEBACK24
                 </p>
@@ -111,22 +111,18 @@
               <table role="presentation" style="width: 100%;">
                 <tr>
                   <td style="width: 25%; text-align: center; padding: 10px;">
-                    <div style="font-size: 32px; margin-bottom: 10px;">🚚</div>
                     <p style="margin: 0; color: #1A1A1A; font-size: 13px; font-weight: bold;">Fast Delivery</p>
                     <p style="margin: 5px 0 0 0; color: #3A3A3A; font-size: 11px;">Quick shipping</p>
                   </td>
                   <td style="width: 25%; text-align: center; padding: 10px;">
-                    <div style="font-size: 32px; margin-bottom: 10px;">🔒</div>
                     <p style="margin: 0; color: #1A1A1A; font-size: 13px; font-weight: bold;">Secure Payment</p>
                     <p style="margin: 5px 0 0 0; color: #3A3A3A; font-size: 11px;">100% safe</p>
                   </td>
                   <td style="width: 25%; text-align: center; padding: 10px;">
-                    <div style="font-size: 32px; margin-bottom: 10px;">🛡️</div>
                     <p style="margin: 0; color: #1A1A1A; font-size: 13px; font-weight: bold;">Warranty</p>
                     <p style="margin: 5px 0 0 0; color: #3A3A3A; font-size: 11px;">Protected</p>
                   </td>
                   <td style="width: 25%; text-align: center; padding: 10px;">
-                    <div style="font-size: 32px; margin-bottom: 10px;">✅</div>
                     <p style="margin: 0; color: #1A1A1A; font-size: 13px; font-weight: bold;">Authentic</p>
                     <p style="margin: 5px 0 0 0; color: #3A3A3A; font-size: 11px;">100% genuine</p>
                   </td>
@@ -142,10 +138,10 @@
                 Need Help? We're Here For You!
               </p>
               <p style="color: #ffffff; margin: 0 0 5px 0; font-size: 13px;">
-                📞 +233 55 134 4310
+                Phone: +233 553 886 5804
               </p>
               <p style="color: #ffffff; margin: 0 0 20px 0; font-size: 13px;">
-                📧 support@hogtechgh.com
+                Email: support@hogtechgh.com
               </p>
               
               <div style="border-top: 1px solid #3A3A3A; padding-top: 20px; margin-top: 20px;">
@@ -153,10 +149,10 @@
                   © 2025 Hogtech. All rights reserved.
                 </p>
                 <p style="color: #ffffff; opacity: 0.7; margin: 0; font-size: 11px;">
-                  Ho Civic Center Shop #22 & Accra, Ghana
+                  Z236 Weija-Oblogo Rd, Greater Accra
                 </p>
                 <p style="color: #ffffff; opacity: 0.6; margin: 15px 0 0 0; font-size: 10px;">
-                  Don't want cart reminders? <a href="{{UNSUBSCRIBE_URL}}" style="color: #FF7A19; text-decoration: underline;">Unsubscribe</a>
+                  Don't want cart reminders? <a href="{{UNSUBSCRIBE_URL}}" style="color: #00afef; text-decoration: underline;">Unsubscribe</a>
                 </p>
               </div>
             </td>
