--- a/email-templates/magic-link.html
+++ b/email-templates/magic-link.html
@@ -14,8 +14,8 @@
           
           <!-- Header with Logo -->
           <tr>
-            <td style="background: linear-gradient(135deg, #FF7A19 0%, #FF8C3A 100%); padding: 40px 30px; text-align: center;">
-              <img src="https://files.hogtechgh.com/hogtech_logo_primary.webp" alt="Hogtech" style="height: 50px; margin-bottom: 20px;" />
+            <td style="background: linear-gradient(135deg, #00afef 0%, #163b86 100%); padding: 40px 30px; text-align: center;">
+              <img src="https://files.hogtechgh.com/IMG_0718.PNG" alt="Hogtech" style="height: 50px; margin-bottom: 20px;" />
               <h1 style="color: #FFFFFF; margin: 0; font-size: 28px; font-weight: 700;">Sign In to Hogtech</h1>
             </td>
           </tr>
@@ -35,14 +35,14 @@
               <table width="100%" cellpadding="0" cellspacing="0">
                 <tr>
                   <td align="center" style="padding: 20px 0;">
-                    <a href="{{ .ConfirmationURL }}" style="display: inline-block; background: linear-gradient(135deg, #FF7A19 0%, #FF8C3A 100%); color: #FFFFFF; text-decoration: none; padding: 16px 40px; border-radius: 8px; font-size: 16px; font-weight: 600; box-shadow: 0 4px 12px rgba(255, 122, 25, 0.3);">
+                    <a href="{{ .ConfirmationURL }}" style="display: inline-block; background: linear-gradient(135deg, #00afef 0%, #163b86 100%); color: #FFFFFF; text-decoration: none; padding: 16px 40px; border-radius: 8px; font-size: 16px; font-weight: 600; box-shadow: 0 4px 12px rgba(0, 175, 239, 0.3);">
                       Sign In Now
                     </a>
                   </td>
                 </tr>
               </table>
 
-              <p style="color: #3A3A3A; font-size: 13px; line-height: 1.6; margin: 30px 0 0; padding: 20px; background-color: #FFF5EF; border-left: 4px solid #FF7A19; border-radius: 4px;">
+              <p style="color: #3A3A3A; font-size: 13px; line-height: 1.6; margin: 30px 0 0; padding: 20px; background-color: #E6F7FF; border-left: 4px solid #00afef; border-radius: 4px;">
                 <strong>Note:</strong> This link will expire in 1 hour and can only be used once. If you didn't request this sign-in link, please ignore this email.
               </p>
 
@@ -50,7 +50,7 @@
               <p style="color: #3A3A3A; font-size: 12px; line-height: 1.6; margin: 30px 0 0; text-align: center;">
                 If the button doesn't work, copy and paste this link into your browser:
               </p>
-              <p style="color: #FF7A19; font-size: 12px; line-height: 1.6; margin: 10px 0; text-align: center; word-break: break-all;">
+              <p style="color: #00afef; font-size: 12px; line-height: 1.6; margin: 10px 0; text-align: center; word-break: break-all;">
                 {{ .ConfirmationURL }}
               </p>
             </td>
@@ -71,13 +71,13 @@
                 <tr>
                   <td align="center">
                     <p style="color: #EDEDED; font-size: 12px; margin: 5px 0;">
-                      📞 +233 55 134 4310
+                      Phone: +233 553 886 5804
                     </p>
                     <p style="color: #EDEDED; font-size: 12px; margin: 5px 0;">
-                      📧 support@hogtechgh.com
+                      Email: support@hogtechgh.com
                     </p>
                     <p style="color: #EDEDED; font-size: 12px; margin: 5px 0;">
-                      📍 Ho Civic Center Shop #22 & Accra
+                      Address: Z236 Weija-Oblogo Rd, Greater Accra
                     </p>
                   </td>
                 </tr>
